--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "expo-image-picker": "^17.0.7",
     "expo-linear-gradient": "^15.0.6",
     "expo-linking": "^8.0.7",
+    "expo-localization": "^17.0.7",
     "expo-notifications": "^0.32.11",
     "expo-router": "^6.0.0",
     "expo-secure-store": "^15.0.7",
@@ -53,6 +54,7 @@
     "expo-system-ui": "^6.0.7",
     "expo-web-browser": "^15.0.6",
     "firebase": "^12.3.0",
+    "i18n-js": "^4.5.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
