--- a/app.json
+++ b/app.json
@@ -5,10 +5,10 @@
     "slug": "aug-event",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/final_quest_240x240.png",
+    "icon": "./assets/images/40355e5b-3b1c-4cfa-836d-28026524860b.jpeg",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/images/final_quest_240x240.png",
+      "image": "./assets/images/40355e5b-3b1c-4cfa-836d-28026524860b.jpeg",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -21,13 +21,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/final_quest_240x240.png",
+        "foregroundImage": "./assets/images/40355e5b-3b1c-4cfa-836d-28026524860b.jpeg",
         "backgroundColor": "#ffffff"
       },
       "package": "com.augevent.app"
     },
     "web": {
-      "favicon": "./assets/images/final_quest_240x240.png",
+      "favicon": "./assets/images/40355e5b-3b1c-4cfa-836d-28026524860b.jpeg",
       "bundler": "metro"
     },
     "plugins": [
@@ -35,7 +35,7 @@
       [
         "expo-notifications",
         {
-          "icon": "./assets/images/final_quest_240x240.png",
+          "icon": "./assets/images/40355e5b-3b1c-4cfa-836d-28026524860b.jpeg",
           "color": "#8B5CF6"
         }
       ],
