--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-native-firebase/firestore": "^23.3.1",
     "@react-native-firebase/messaging": "^23.3.1",
     "@react-native-firebase/storage": "^23.3.1",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -38,6 +39,7 @@
     "expo-camera": "^17.0.8",
     "expo-constants": "~18.0.8",
     "expo-crypto": "^15.0.7",
+    "expo-file-system": "^19.0.15",
     "expo-font": "^14.0.7",
     "expo-glass-effect": "^0.1.1",
     "expo-haptics": "^15.0.6",
@@ -45,6 +47,7 @@
     "expo-linear-gradient": "^15.0.6",
     "expo-linking": "^8.0.7",
     "expo-localization": "^17.0.7",
+    "expo-media-library": "^18.2.0",
     "expo-notifications": "^0.32.11",
     "expo-router": "^6.0.0",
     "expo-secure-store": "^15.0.7",
