--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "expo-linear-gradient": "^15.0.6",
     "expo-linking": "^8.0.7",
     "expo-localization": "^17.0.7",
+    "expo-location": "^19.0.7",
     "expo-media-library": "^18.2.0",
     "expo-notifications": "^0.32.11",
     "expo-router": "^6.0.0",
